Fix menu/content overlap.
llvm-svn: 52207

--- a/clang/www/menu.css
+++ b/clang/www/menu.css
@@ -4,7 +4,6 @@
 
 [id=menu] {
 	position:fixed;
-	padding-left:5ex;
 }
 [id=content] {
 	/* *****  EDIT THIS VALUE IF CONTENT OVERLAPS MENU ***** */
